# ghostsyn

./: .gitignore  Makefile  README.rst  design_ideas.txt
compile/: Makefile  intel2gas_pp.py  rendertest.cpp
doc/: Makefile  README.rst
examples/: README.rst  cassini.json  region-de-magallanes.json
resources/: ghostsyn.ttl  manifest.ttl.in
src/: CMakeLists.txt  Makefile  bass.patch  bass2.patch  common.mk  compressor.hpp  controller.cpp  controller.hpp  dcfilter.hpp  delay.hpp  ghostsyn.cpp  ghostsyn.hpp  globalconfig.hpp  instrument.cpp  instrument.hpp  saw.patch  sqlead.patch  test_controller.cpp  testrun.sh  utils.hpp  voice.cpp  voice.hpp
src/algotests/: Makefile  algotests.cpp
src/gui/: Makefile  audio.cpp  audio.hpp  editor_window.cpp  editor_window.hpp  fonts.cpp  fonts.hpp  instruments.cpp  instruments.hpp  main.cpp  main_window.cpp  main_window.hpp  patch_editor_window.cpp  patch_editor_window.hpp  songtool.py  testsong8_1.json  tracker_window.cpp  tracker_window.hpp  types.hpp  ui_colors.hpp  ui_constants.hpp  utils.cpp  utils.hpp
src/lv2/: lv2_ghostsyn.ttl  lv2_plugin.cpp  manifest.ttl
src/patches/: bass.patch  bass2.patch  bd.patch  bd2.patch  saw.patch  sd.patch  sqlead.patch
src/standalone/: main.cpp
src/synth/: Makefile  compressor.cpp  constants.asm  controller.hpp  dcfilter.cpp  delay.cpp  ghostsyn.cpp  ghostsyn.hpp  module_chorus.asm  module_compressor.asm  module_delay.asm  module_envelope.asm  module_filter.asm  module_filter_v2.asm  module_oscillator.asm  module_reverb.asm  rt_controls.hpp  songfmt_test.asm  synth.asm  synth_api.h  testprog.cpp  tracker_workspace.asm  voice.cpp  voice.hpp
src/synthdata/: Makefile  audio.hpp  bin_section.cpp  bin_section.hpp  errors.hpp  module.cpp  module.hpp  pattern.cpp  pattern.hpp  tracker_data.cpp  tracker_data.hpp  utils.cpp  utils.hpp
src/tools/: Makefile  synthtool.cpp
work/: primordial-ooze-instruments.json  primordial-ooze.json
